Brettet vises, yay

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,10 @@
 /RemiSøkningsListe$Person.class
 /RemiSøkningsListe.class
 /ChessGUI.class
+/brukerappTest.class
+/brukerappMeny.class
+/brukerapp$LinjeHandlerClass.class
+/brukerapp$MangekantHandlerClass.class
+/brukerapp$RektangelHandlerClass.class
+/brukerapp$SirkelHandlerClass.class
+/brukerapp$TekstHandlerClass.class
